overflow fixed

--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,6 @@
 html {
     background: linear-gradient(128deg, #be90f0a8, #29fff3a6);
+    overflow: scroll;
 }
 
 body {
@@ -8,7 +9,7 @@ body {
     color: #333;
     margin: 0;
     padding: 0;
-    overflow: auto;
+    overflow: hidden;
 }
 
 header {
@@ -19,7 +20,7 @@ header {
     padding-bottom: 0.5rem !important;
     justify-content: center;
     display: flex;
-    overflow: auto;
+    overflow: hidden;
 }
 
 header h1 {
